# notebooks

./: .gitignore  README.md  build-environment.yml  environment.yml  pyproject.toml
.github/workflows/: deploy.yml
jupyter_data/nbconvert/templates/lab_test_toc/: index.html.j2
jupyter_data/nbconvert/templates/lab_test_toc/static/: toc.js
jupyter_data/voila/templates/custom/: conf.json  index.html.j2
jupyter_data/voila/templates/custom/static/: index.css  theme-light.css  toc.css  toc.js  toc_new.js
notebooks/: delaunay.ipynb  sample_notebook.ipynb
utils/: preprocessors.py
